| Summary: | ASTERISK-24977: Contacts that don't use qualify are being marked as unavailable | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2015-04-18 23:29:22 | Date Closed: | 2015-04-20 17:25:36 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.4.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Change 44/47 introduced a bug where contacts (and their endpoints) that don't use qualify (qualify_frequency=0) are being marked as permanently unavailable.
| ||
| Comments: | |||